[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/sprites/ship_cruiser2.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/alterebro-pixel-font.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/sprites/ships_biomech1.png" type="Texture" id=3]
[ext_resource path="res://menus/css.gd" type="Script" id=4]
[ext_resource path="res://assets/UI/ship_frame.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="Animation" id=3]
resource_name = "pulse"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 0.287174, 2.21914, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 1, 1 ) ]
}

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="Animation" id=5]
resource_name = "pulse"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 0.287174, 2.21914, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.95, 1.3 ), Vector2( 1.5, 1 ) ]
}

[node name="CSS" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 512.0
margin_bottom = 300.0
color = Color( 0.0352941, 0.0352941, 0.0352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="."]
margin_right = 512.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 512.0
margin_bottom = 23.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = 52.0
margin_right = 512.0
margin_bottom = 76.0
size_flags_vertical = 6
size_flags_stretch_ratio = 3.11
custom_fonts/font = SubResource( 1 )
text = "SELECT YOUR SHIP"
align = 1

[node name="VBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 212.0
margin_top = 105.0
margin_right = 300.0
margin_bottom = 137.0
size_flags_horizontal = 4
size_flags_stretch_ratio = 8.79

[node name="Ship1" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
texture_normal = SubResource( 2 )

[node name="Frame" type="TextureRect" parent="HBoxContainer/VBoxContainer/Ship1"]
margin_left = -2.0
margin_top = -2.0
margin_right = 30.832
margin_bottom = 31.152
rect_pivot_offset = Vector2( 18, 18 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HBoxContainer/VBoxContainer/Ship1/Frame"]
autoplay = "pulse"
anims/pulse = SubResource( 3 )

[node name="Ship2" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
margin_left = 36.0
margin_right = 84.0
margin_bottom = 32.0
texture_normal = SubResource( 4 )

[node name="Frame" type="TextureRect" parent="HBoxContainer/VBoxContainer/Ship2"]
margin_left = 6.0
margin_top = -2.0
margin_right = 42.0
margin_bottom = 34.0
rect_scale = Vector2( 1.5, 1 )
rect_pivot_offset = Vector2( 18, 18 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HBoxContainer/VBoxContainer/Ship2/Frame"]
autoplay = "pulse"
anims/pulse = SubResource( 5 )

[node name="Ship3" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
margin_left = 88.0
margin_right = 88.0
margin_bottom = 32.0

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 141.0
margin_right = 512.0
margin_bottom = 300.0
size_flags_vertical = 3
size_flags_stretch_ratio = 6.69

[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/Ship1" to="." method="_on_Ship1_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/Ship1" to="." method="_on_Ship1_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Ship1" to="." method="_on_Ship1_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/Ship2" to="." method="_on_Ship2_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/Ship2" to="." method="_on_Ship2_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Ship2" to="." method="_on_Ship2_pressed"]
